# confiance-v7bfcp-only-05

./: .gitignore  README
BFCP_library/: README
BFCP_library/BFCP_participant/: Makefile  bfcp_messages_build.c  bfcp_messages_parse.c  bfcp_participant.c  bfcp_participant.h  main.c
BFCP_library/BFCP_server/: Makefile  bfcp_floor_list.c  bfcp_link_list.c  bfcp_link_list.h  bfcp_server.c  bfcp_server.h  bfcp_threads.h  bfcp_user_list.c  bfcp_user_list.h  main.c
BFCP_messages_processing/: CMakeLists.txt  Makefile  README  README.md  bfcp_messages.c  bfcp_messages.h  bfcp_messages_build.c  bfcp_messages_parse.c  bfcp_strings.h  testcode.c
